--- a/localisation/english/MD_subideology_parties_l_english.yml
+++ b/localisation/english/MD_subideology_parties_l_english.yml
@@ -597,7 +597,7 @@
  ### Finland ###
  FIN.conservatism: "£FIN_conservatism_small Suomen Keskusta"
  FIN.conservatism_icon: "£FIN_conservatism_small"
- FIN.conservatism_desc: "Conservative - Suomen Keskusta (Centre Party of Finland) is a liberal-agrarian party with it's greatest following coming from rural areas. Throughout Finland's history it has usually been the largest or second largest party, in fierce competition with SDP."
+ FIN.conservatism_desc: "Conservative - Suomen Keskusta (Centre Party of Finland) is a liberal-agrarian party with it's greatest following coming from rural areas. Throughout Finland's history it usually have been the largest or second largest party, in fierce competition with SDP."
  FIN.liberalism: "£FIN_liberalism_small Kansallinen Kokoomus"
  FIN.liberalism_icon: "£FIN_liberalism_small"
  FIN.liberalism_desc: "Liberal - Kansallinen Kokoomus (National Coalition Party) is a right-liberal party. It promotes social-liberal values and is firmly pro-NATO and pro-EU."
