--- a/localisation/english/equipment_l_english.yml
+++ b/localisation/english/equipment_l_english.yml
@@ -142,21 +142,21 @@
  APC_Equipment_desc: "An armoured personnel carrier (APC) is a type of armoured fighting vehicle (AFV) designed to transport infantry to the battlefield."
  APC_desc: "An armoured personnel carrier (APC) is a type of armoured fighting vehicle (AFV) designed to transport infantry to the battlefield."
  APC_1: "APC 1965"
- APC_1_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but has usually limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
+ APC_1_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but usually have limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
  APC_2: "APC 1975"
- APC_2_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but has usually limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
+ APC_2_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but usually have limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
  APC_3: "APC 1985"
- APC_3_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but has usually limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
+ APC_3_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but usually have limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
  APC_4: "APC 1995"
- APC_4_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but has usually limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
+ APC_4_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but usually have limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
  APC_5: "APC 2005"
- APC_5_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but has usually limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
+ APC_5_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but usually have limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
  APC_6: "APC 2015"
- APC_6_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but has usually limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
+ APC_6_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but usually have limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
  APC_7: "APC 2025"
- APC_7_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but has usually limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
+ APC_7_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but usually have limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
  APC_8: "APC 2035"
- APC_8_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but has usually limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
+ APC_8_desc: "Armored Personnel Carriers are armored vehicles designed to carry a squad of soldiers into battle, which then dismount and fight on foot. They offer protection for the soldiers, but usually have limited offensive capabilities of their own. Infantry being carried by APCs are called Mechanized Infantry."
  apc_equipment_0: "1965 APC"
  apc_equipment_1: "1975 APC"
  apc_equipment_2: "1995 APC"
@@ -164,24 +164,24 @@
  apc_equipment_4: "2035 APC"
 
  IFV_Equipment: "Infantry Fighting Vehicles"
- IFV_Equipment_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and a autocannon, or have ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
+ IFV_Equipment_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and an autocannon, or have an ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
  IFV_1: "IFV 1965"
- IFV_1_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and a autocannon, or have ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
+ IFV_1_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and an autocannon, or have an ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
  IFV_desc: "An infantry fighting vehicle (IFV), or infantry combat vehicle (ICV), is a type of armoured fighting vehicle used to carry infantry into battle and provide direct fire support."
  IFV_2: "IFV 1975"
- IFV_2_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and a autocannon, or have ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
+ IFV_2_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and an autocannon, or have an ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
  IFV_3: "IFV 1985"
- IFV_3_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and a autocannon, or have ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
+ IFV_3_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and an autocannon, or have an ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
  IFV_4: "IFV 1995"
- IFV_4_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and a autocannon, or have ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
+ IFV_4_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and an autocannon, or have an ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
  IFV_5: "IFV 2005"
- IFV_5_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and a autocannon, or have ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
+ IFV_5_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and an autocannon, or have an ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
  IFV_6: "IFV 2015"
- IFV_6_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and a autocannon, or have ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
+ IFV_6_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and an autocannon, or have an ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
  IFV_7: "IFV 2025"
- IFV_7_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and a autocannon, or have ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
+ IFV_7_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and an autocannon, or have an ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
  IFV_8: "IFV 2035"
- IFV_8_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and a autocannon, or have ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
+ IFV_8_desc: "Infantry Fighting Vehicles are heavily armored vehicles that carry a squad of soldiers into battle. The embedded infantry can fight from the vehicle itself to a much larger degree than from APCs. IFVs are armed with a heavy machine gun and an autocannon, or have an ATGM mounted. Infantry being carried by IFVs are either called Armored Infantry or Heavy Mechanized Infantry."
  ifv_equipment_0: "1965 IFV"
  ifv_equipment_1: "1975 IFV"
  ifv_equipment_2: "1995 IFV"
@@ -815,7 +815,7 @@
  BLR_Anti_tank_0: "RPG-7"
  BLR_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  BLR_Anti_tank_1: "AT-4 Fagot"
- BLR_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
+ BLR_Anti_tank_1_desc: "Much lighter than the other ATGM-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
  BLR_Anti_tank_2: "Shershen"
  BLR_Anti_tank_2_desc: "Shershen"
 
@@ -4122,7 +4122,7 @@
  SOV_Anti_tank_0: "RPG-7"
  SOV_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  SOV_Anti_tank_1: "AT-4 Fagot"
- SOV_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
+ SOV_Anti_tank_1_desc: "Much lighter than the other ATGM-systems, and older. This ATGM can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
  SOV_Anti_tank_2: "9M133M Kornet-M"
  SOV_Anti_tank_2_desc: "9M133M Kornet-M"
  SOV_Anti_tank_3: "AT-22"
@@ -10008,7 +10008,7 @@
  BSH_Anti_tank_0: "RPG-7"
  BSH_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  BSH_Anti_tank_1: "AT-4 Fagot"
- BSH_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
+ BSH_Anti_tank_1_desc: "Much lighter than the other ATGM-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
  BSH_Anti_tank_2: "9M133M Kornet-M"
  BSH_Anti_tank_2_desc: "9M133M Kornet-M"
  BSH_Anti_tank_3: "AT-22"
@@ -10119,7 +10119,7 @@
  CRM_Anti_tank_0: "RPG-7"
  CRM_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  CRM_Anti_tank_1: "AT-4 Fagot"
- CRM_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
+ CRM_Anti_tank_1_desc: "Much lighter than the other ATGM-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
  CRM_Anti_tank_2: "9M133M Kornet-M"
  CRM_Anti_tank_2_desc: "9M133M Kornet-M"
  CRM_Anti_tank_3: "AT-22"
@@ -10321,7 +10321,7 @@
  TAT_Anti_tank_0: "RPG-7"
  TAT_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  TAT_Anti_tank_1: "AT-4 Fagot"
- TAT_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
+ TAT_Anti_tank_1_desc: "Much lighter than the other ATGM-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
  TAT_Anti_tank_2: "9M133M Kornet-M"
  TAT_Anti_tank_2_desc: "9M133M Kornet-M"
  TAT_Anti_tank_3: "AT-22"
@@ -10616,7 +10616,7 @@
  WAG_Anti_tank_0: "RPG-7"
  WAG_Anti_tank_0_desc: "Used in many wars and on many vehicles."
  WAG_Anti_tank_1: "AT-4 Fagot"
- WAG_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
+ WAG_Anti_tank_1_desc: "Much lighter than the other ATGM-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
  WAG_Anti_tank_2: "9M133M Kornet-M"
  WAG_Anti_tank_2_desc: "9M133M Kornet-M"
  WAG_Anti_tank_3: "AT-22"
@@ -10794,7 +10794,7 @@ PMR_IFV_5_short: "BMP-3M"
 PMR_Anti_tank_0: "RPG-7"
 PMR_Anti_tank_0_desc: "Used in many wars and on many vehicles."
 PMR_Anti_tank_1: "AT-4 Fagot"
-PMR_Anti_tank_1_desc: "Much lighter than the other AT-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
+PMR_Anti_tank_1_desc: "Much lighter than the other ATGM-systems, and older. The AT can only hit at 70-2,500 m which compared to others is much lesser range than the others but also cheaper."
 PMR_Anti_tank_2: "9M133M Kornet-M"
 PMR_Anti_tank_2_desc: "9M133M Kornet-M"
 
