--- a/localisation/english/MD_techs_l_english.yml
+++ b/localisation/english/MD_techs_l_english.yml
@@ -1735,9 +1735,9 @@
  cruiser_hull_5: "2045 Cruiser Hull"
  cruiser_hull_5_desc: "Typically the largest assault ships in a modern fleet (besides Aircraft Carriers and Amphibious Assault ships), these powerful assets can cover the entire globe's oceans and seas. Historically geared toward Air Defense (while Destroyers were tasked with Surface Warfare), modern Cruisers have an incredible arsenal of weapons at their disposal – greater than any other combat ship. Cruisers can be used as the basis for an entire battle group, with a large capacity for sensors and combat management systems. They are typically used for: command and control, anti-aircraft, anti-ship, and land attack duties."
  aircraft_heli_engineering_1: "Helicopter Carrying Engineering"
- aircraft_heli_engineering_1_desc: "Refitting our current aircraft carriers with more efficient forms of helicopter deployment and storage can improve our ability to contest submarines.Refitting our current aircraft carriers with more efficient forms of helicopter deployment and storage can improve our ability to contest submarines."
+ aircraft_heli_engineering_1_desc: "Refitting our current aircraft carriers with more efficient forms of helicopter deployment and storage can improve our ability to contest submarines."
  aircraft_heli_engineering_2: "Improved Helicopter Deployment"
- aircraft_heli_engineering_2_desc: "Refitting our current aircraft carriers with more efficient forms of helicopter deployment and storage can improve our ability to contest submarines.Refitting our current aircraft carriers with more efficient forms of helicopter deployment and storage can improve our ability to contest submarines."
+ aircraft_heli_engineering_2_desc: "Refitting our current aircraft carriers with more efficient forms of helicopter deployment and storage can improve our ability to contest submarines."
  aircraft_heli_engineering_3: "Redesigned Helicopter Storage"
  aircraft_heli_engineering_3_desc: "Refitting our current aircraft carriers with more efficient forms of helicopter deployment and storage can improve our ability to contest submarines."
  helicopter_operator_desc: ""
