--- a/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
+++ b/localisation/simp_chinese/MD_techs_l_simp_chinese.yml
@@ -13,7 +13,7 @@
  Arty_upgrade_4: "多发同时弹着  II"
  Arty_upgrade_4_desc: "一种经过升级的高端组件，允许其同时与多个敌方目标交战 。"
  Arty_upgrade_5: "整装式液体发射药"
- Arty_upgrade_5_desc: "一种允许火炮的设计更加简洁的先进技术，并提供更多战术和后勤选择。"
+ Arty_upgrade_5_desc: "先进的技术可以实现简单的枪支设计和更广泛的战术和后勤选择。"
  nsb_Arty_upgrade_1: "多发同时弹着"
  nsb_Arty_upgrade_1_desc: "修正每个弹头的发射角度和速度的过程 - 从而使所有的炮弹同时命中目标。"
  nsb_Arty_upgrade_2: "火控系统"
@@ -35,33 +35,33 @@
  nsb_artillery_0: "1965型火炮"
  nsb_artillery_0_desc: "火炮拥有强大的间接攻击能力，在战场上提供超视距持续火力打击，可以由炮手重新装填。因为它的移动需要外部车辆，所以难以在攻击间隙移动，这使得它很容易遭到敌人的炮火反击。轻型小口径火炮可以徒手拖曳，能安装在运输机内，很适合机载作战。"
  AA_upgrade_1: "第2代电池冷却装置"
- AA_upgrade_1_desc: "内含一个热电池，为飞行前的准备操作提供能源。并供应氩气以冷却导弹导引头中的红外探测器。"
+ AA_upgrade_1_desc: "包含一个温控电池，为飞行前操作提供电力，以及供应氩气来冷却导弹导引头中的红外探测器。"
  AA_upgrade_2: "第3代红外/紫外蔷薇线扫描"
- AA_upgrade_2_desc: "电磁光谱的紫外波段有作为制导武器操作主介质的潜质 - 这是该技术的延续"
+ AA_upgrade_2_desc: "电磁波谱的紫外波段有可能被用作制导武器操作的宿主介质 - 这是该技术的延续。"
  AA_upgrade_3: "冷却红外系统"
- AA_upgrade_3_desc: "其高度灵敏，可以检测到目标中最微小的温度变化"
+ AA_upgrade_3_desc: "灵敏度高，可以检测到目标最细微的温度变化。"
  AA_upgrade_4: "铟镓砷影像传感器"
- AA_upgrade_4_desc: "现代高超音速成像系统使用这些感应装置来采集目标图像"
+ AA_upgrade_4_desc: "现代高超音速成像系统使用这些传感器来获取目标的图像。"
  AT_upgrade_1: "半自动指令线瞄准系统"
- AT_upgrade_1_desc: "半自动命令线制导系统是一种导弹指挥制导技术，需要操作员在导弹飞行的整个过程中锁定目标。"
+ AT_upgrade_1_desc: "半自动瞄准线指挥 - 一种导弹指挥制导方法，要求操作员在整个导弹飞行过程中锁定目标。"
  AT_upgrade_2: "射后不理"
- AT_upgrade_2_desc: "导弹在发射后自我制导的能力。"
+ AT_upgrade_2_desc: "导弹发射后自行引导至目标的能力。"
  AT_upgrade_3: "改进型串联炸药"
- AT_upgrade_3_desc: "有效针对爆炸反应装甲 - 这种多级战斗部首先刺穿外部附加装甲，使第二级战斗部不受阻碍地击穿装甲，随后在内部爆炸。"
+ AT_upgrade_3_desc: "对反应装甲有效 - 这种多级弹头首先击穿外装甲，使第二枚弹头畅通无阻地通过，并在内部引爆。"
  AT_upgrade_4: "游荡弹药"
- AT_upgrade_4_desc: "这是一种在目标区域附近徘徊一段时间以搜索目标，随后一旦发现目标便进行攻击的导弹系统种类。"
+ AT_upgrade_4_desc: "一种武器系统类别，其中弹药在目标区域周围徘徊一段时间，搜索目标，并在找到目标后进行攻击。"
  AS_upgrade_1: "矢量推进器"
- AS_upgrade_1_desc: "控制发动机推力方向的能力 - 提供更优秀的空中格斗能力和更高的敏捷性。"
+ AS_upgrade_1_desc: "能够操纵发动机推力的方向 - 从而大大提高空中格斗能力和敏捷性。"
  AS_upgrade_2: "第2代隐形技术"
- AS_upgrade_2_desc: "改进过的的隐身能力允许飞机入侵更远的敌方空域并带来了更强大的生存能力。"
+ AS_upgrade_2_desc: "改进的隐身特性和性能使其能够更好地侵入敌方空域并提高生存能力。"
  AS_upgrade_3: "远程控制"
- AS_upgrade_3_desc: "无人机可以执行更危险的任务，而且他们能承受更高的过载。"
+ AS_upgrade_3_desc: "将人类从机器中解放出来可以执行更危险的任务，并且飞机可以承受更高的重力。"
  MR_upgrade_1: "超音速巡航"
- MR_upgrade_1_desc: "无需加力燃烧的高效超音速巡航。"
+ MR_upgrade_1_desc: "无需加力燃烧器即可有效维持超音速飞行。"
  MR_upgrade_2: "第2代隐形技术"
- MR_upgrade_2_desc: "改进过的的隐身能力允许飞机入侵更远的敌方空域并带来了更强大的生存能力。"
+ MR_upgrade_2_desc: "改进的隐身特性和性能使其能够更好地侵入敌方空域并提高生存能力。"
  MR_upgrade_3: "远程控制"
- MR_upgrade_3_desc: "无人机可以执行更危险的任务，且他们能承受更高的过载。"
+ MR_upgrade_3_desc: "将人类从机器中解放出来可以执行更危险的任务，并且飞机可以承受更高的重力。"
  tank_armor_upgrade: "装甲"
  tank_armor_upgrade_desc: "超过敌人穿甲能力的装甲会让你的部队获得巨大的优势，但也会使它们速度更慢。"
  tank_gun_upgrade: "主炮"
@@ -611,7 +611,7 @@
  night_vision_2: "第2代夜视镜"
  night_vision_2_desc: "第2代夜视仪在第1代基础上改进了平台，能够生成更清晰的图像，扩大了视野可视范围。"
  night_vision_3: "第3代夜视镜"
- night_vision_3_desc: "第3代夜视仪在第2代平台上再次进行了升级，它几乎能在夜间为战斗人员显示像白天一样清晰的图像。"
+ night_vision_3_desc: "第3代护目镜再次在上一代平台上进行了改进，能在夜间为战斗人员显示像白天一样清晰的图像。"
  night_vision_4: "第4代夜视镜"
  night_vision_4_desc: "第4代夜视仪在以往的平台上做出了最大的改进，它显示最清晰的画面，在战斗中也最高效。"
  support_weapons: "冷战支援武器"
@@ -665,7 +665,7 @@
  infantry_mass_assault: "步兵大规模突击"
  infantry_mass_assault_desc: "使用人海战术、大规模步兵编队和大规模冲锋，将在士兵的重压下冲垮敌方阵地。"
  early_guerilla_warfare: "早期游击战术"
- early_guerilla_warfare_desc: "使用游击战术以及非常规战略，我们能够战胜军事上占优势的敌人并坚持下去。"
+ early_guerilla_warfare_desc: "使用游击战术以及非常规战略，我们可以战胜军事上占优势的敌人并延长战斗时间。"
  offensive_focus: "专注协同攻击"
  offensive_focus_desc: "空中优势是进攻行动的关键，应优先考虑支援前线地面部队的防空行动。"
  lr_maritime_strike: "远程海上打击"
@@ -925,21 +925,21 @@
  tech_autonomous_system_control_ai: "自主系统控制AI"
  tech_autonomous_system_control_ai_desc: ""
  tech_mtg_landing_craft: "登陆艇"
- tech_mtg_landing_craft_desc: ""
+ tech_mtg_landing_craft_desc: "登陆艇是一种用于将部队从近海运送到海岸进行两栖作战的小型舰船。"
  tech_mtg_amphibious_assault_ship: "两栖突击舰"
- tech_mtg_amphibious_assault_ship_desc: ""
+ tech_mtg_amphibious_assault_ship_desc: "两栖攻击舰是在敌方沿海地区进行两栖作战时，用于前线后方提供空中和地面支援的军舰。"
  tech_mtg_air_cushioned_landing_craft: "气垫登陆艇"
- tech_mtg_air_cushioned_landing_craft_desc: ""
+ tech_mtg_air_cushioned_landing_craft_desc: "在两栖作战中，传统舰载登陆艇只能在全世界15%左右的海岸线上登陆，而20世纪60年代后发展起来的气垫登陆艇可以达到70%，因此其适应性得到了极大的提高，同时其航速也比传统登陆艇快，可以搭载主战坦克，掩护陆战队员上岸，气垫登陆艇彻底改变了两栖登陆的游戏规则。"
  tech_mtg_modern_landing_craft: "现代登陆艇"
- tech_mtg_modern_landing_craft_desc: ""
+ tech_mtg_modern_landing_craft_desc: "现代技术的引入，使登陆艇的性能有了很大的发展，大大提高了两栖登陆的效率。"
  tech_mtg_specialized_protective_equipment: "特种防护装备"
- tech_mtg_specialized_protective_equipment_desc: ""
+ tech_mtg_specialized_protective_equipment_desc: "特殊的防护设备可以大大提高登陆艇的生存力。"
  tech_mtg_advanced_landing_craft: "先进登陆艇"
- tech_mtg_advanced_landing_craft_desc: ""
+ tech_mtg_advanced_landing_craft_desc: "先进的登陆舰经过改进，能够适应不同的海陆地形，大大提高登陆作战的成功率。"
  tech_mtg_landing_craft_ai_systems: "登陆艇AI系统"
- tech_mtg_landing_craft_ai_systems_desc: ""
+ tech_mtg_landing_craft_ai_systems_desc: "人工智能的引入使得登陆艇能够对突发事件做出及时、正确的反应。"
  tech_mtg_smart_landing_craft: "智能登陆艇"
- tech_mtg_smart_landing_craft_desc: ""
+ tech_mtg_smart_landing_craft_desc: "智能登陆艇是未来技术在两栖作战中的应用。"
  corvette_desc: "轻型护卫舰是一种小型战舰，比大型护卫舰便宜，更容易被消耗。"
  corvette_hull_1: "1965型轻型护卫舰船体"
  corvette_hull_1_desc: "护卫舰被认为是军舰中的最小级别的舰船，通常她们不属于“蓝水”海军。这些小型舰艇通常装备有各种各样的武器，可以执行多种多样的任务。由于许多国家仅能负担得起一支中小型海军，因此护卫舰是它们的不二之选。她们通常用于：海岸防卫和监视、扫雷、反潜、防空、反舰、以及对地攻击任务。"
@@ -983,38 +983,38 @@
  stealth_destroyer_hull_2_desc: "现代战争技术的变化已使越来越多的先进海军寻求新的手段来提高舰队的生存能力，而隐身驱逐舰已经成为大家关注的焦点。隐藏在敌方的先进传感器和雷达中意味着这些强大的战舰可以在离敌人更近的地方发动更快、更致命的打击，而额外好处是她们在现代冲突中拥有更高的生存能力。"
  stealth_destroyer_hull_3: "2045型隐身驱逐舰船体"
  stealth_destroyer_hull_3_desc: "现代战争技术的变化已使越来越多的先进海军寻求新的手段来提高舰队的生存能力，而隐身驱逐舰已经成为大家关注的焦点。隐藏在敌方的先进传感器和雷达中意味着这些强大的战舰可以在离敌人更近的地方发动更快、更致命的打击，而额外好处是她们在现代冲突中拥有更高的生存能力。"
- cruiser_desc: "巡洋舰是现代舰队中最大的攻击舰，这些强大的资产可以覆盖整个海洋。"
+ cruiser_desc: "这些强大的武器通常是现代舰队中主要的火力输出舰，可以覆盖全球整个海洋和海域。"
  cruiser_hull_1: "1965型巡洋舰船体"
- cruiser_hull_1_desc: "巡洋舰是现代舰队中吨位最大的战舰（除了航空母舰和两栖攻击舰），这些强大的装备的航程可以覆盖整个海洋。在历史上，巡洋舰的主要任务是防空（而驱逐舰的任务是水面战），而现代巡洋舰有着令人难以置信的丰富武器库，比任何其他战斗舰艇都要强大。巡洋舰可以作为整个战斗群的基础，她也拥有有大量的传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰以及对地攻击任务。"
+ cruiser_hull_1_desc: "这些强大的舰船通常是现代舰队中最大的攻击舰（除了航空母舰和两栖攻击舰），可以覆盖全球的整个海洋。现代巡洋舰历来以防空为主要任务（而驱逐舰则负责水面作战），拥有令人难以置信的武器库 - 比任何其他战斗舰都多。巡洋舰可以作为整个战斗群的基础，拥有大量传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰和对陆攻击任务。"
  tech_battleship_hull_1: "1965型战列舰船体"
- tech_battleship_hull_1_desc: ""
+ tech_battleship_hull_1_desc: "水面舰艇是舰队的主要组成部分，承担传统舰队的一切海上职能。"
  cruiser_hull_2: "1985型巡洋舰船体"
- cruiser_hull_2_desc: "巡洋舰是现代舰队中吨位最大的战舰（除了航空母舰和两栖攻击舰），这些强大的装备的航程可以覆盖整个海洋。在历史上，巡洋舰的主要任务是防空（而驱逐舰的任务是水面战），而现代巡洋舰有着令人难以置信的丰富武器库，比任何其他战斗舰艇都要强大。巡洋舰可以作为整个战斗群的基础，她也拥有有大量的传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰以及对地攻击任务。"
+ cruiser_hull_2_desc: "这些强大的舰船通常是现代舰队中最大的攻击舰（除了航空母舰和两栖攻击舰），可以覆盖全球的整个海洋。现代巡洋舰历来以防空为主要任务（而驱逐舰则负责水面作战），拥有令人难以置信的武器库 - 比任何其他战斗舰都多。巡洋舰可以作为整个战斗群的基础，拥有大量传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰和对陆攻击任务。"
  cruiser_hull_3: "2005型巡洋舰船体"
- cruiser_hull_3_desc: "巡洋舰是现代舰队中吨位最大的战舰（除了航空母舰和两栖攻击舰），这些强大的装备的航程可以覆盖整个海洋。在历史上，巡洋舰的主要任务是防空（而驱逐舰的任务是水面战），而现代巡洋舰有着令人难以置信的丰富武器库，比任何其他战斗舰艇都要强大。巡洋舰可以作为整个战斗群的基础，她也拥有有大量的传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰以及对地攻击任务。"
+ cruiser_hull_3_desc: "这些强大的舰船通常是现代舰队中最大的攻击舰（除了航空母舰和两栖攻击舰），可以覆盖全球的整个海洋。现代巡洋舰历来以防空为主要任务（而驱逐舰则负责水面作战），拥有令人难以置信的武器库 - 比任何其他战斗舰都多。巡洋舰可以作为整个战斗群的基础，拥有大量传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰和对陆攻击任务。"
  tech_battleship_hull_2: "2005型战列舰船体"
- tech_battleship_hull_2_desc: ""
+ tech_battleship_hull_2_desc: "水面舰艇是舰队的主要组成部分，承担传统舰队的一切海上职能。"
  cruiser_hull_4: "2025型巡洋舰船体"
- cruiser_hull_4_desc: "巡洋舰是现代舰队中吨位最大的战舰（除了航空母舰和两栖攻击舰），这些强大的装备的航程可以覆盖整个海洋。在历史上，巡洋舰的主要任务是防空（而驱逐舰的任务是水面战），而现代巡洋舰有着令人难以置信的丰富武器库，比任何其他战斗舰艇都要强大。巡洋舰可以作为整个战斗群的基础，她也拥有有大量的传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰以及对地攻击任务。"
+ cruiser_hull_4_desc: "这些强大的舰船通常是现代舰队中最大的攻击舰（除了航空母舰和两栖攻击舰），可以覆盖全球的整个海洋。现代巡洋舰历来以防空为主要任务（而驱逐舰则负责水面作战），拥有令人难以置信的武器库 - 比任何其他战斗舰都多。巡洋舰可以作为整个战斗群的基础，拥有大量传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰和对陆攻击任务。"
  tech_battleship_hull_3: "2045型战列舰船体"
- tech_battleship_hull_3_desc: ""
+ tech_battleship_hull_3_desc: "水面舰艇是舰队的主要组成部分，承担传统舰队的一切海上职能。"
  cruiser_hull_5: "2045型巡洋舰船体"
- cruiser_hull_5_desc: "巡洋舰是现代舰队中吨位最大的战舰（除了航空母舰和两栖攻击舰），这些强大的装备的航程可以覆盖整个海洋。在历史上，巡洋舰的主要任务是防空（而驱逐舰的任务是水面战），而现代巡洋舰有着令人难以置信的丰富武器库，比任何其他战斗舰艇都要强大。巡洋舰可以作为整个战斗群的基础，她也拥有有大量的传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰以及对地攻击任务。"
+ cruiser_hull_5_desc: "这些强大的舰船通常是现代舰队中最大的攻击舰（除了航空母舰和两栖攻击舰），可以覆盖全球的整个海洋。现代巡洋舰历来以防空为主要任务（而驱逐舰则负责水面作战），拥有令人难以置信的武器库 - 比任何其他战斗舰都多。巡洋舰可以作为整个战斗群的基础，拥有大量传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰和对陆攻击任务。"
  aircraft_heli_engineering_1: "直升机运载工程"
- aircraft_heli_engineering_1_desc: "用更高效的直升机部署和存储方式对我们现有的航空母舰进行改装，可以提高我们的反潜能力。"
+ aircraft_heli_engineering_1_desc: "对我们现有的航空母舰进行改装，使其配备更高效的直升机部署和储存方式，可以提高我们对抗潜艇的能力。"
  aircraft_heli_engineering_2: "改进直升机部署方式"
- aircraft_heli_engineering_2_desc: ""
+ aircraft_heli_engineering_2_desc: "对我们现有的航空母舰进行改装，使其配备更高效的直升机部署和储存方式，可以提高我们对抗潜艇的能力。"
  aircraft_heli_engineering_3: "重新设计直升机存储方式"
- aircraft_heli_engineering_3_desc: ""
+ aircraft_heli_engineering_3_desc: "对我们现有的航空母舰进行改装，使其配备更高效的直升机部署和储存方式，可以提高我们对抗潜艇的能力。"
  helicopter_operator_desc: ""
  helicopter_operator_hull_1: "1970型直升机航空母舰船体"
- helicopter_operator_hull_1_desc: ""
+ helicopter_operator_hull_1_desc: "直升机航母是一种主要用于搭载直升机的航空母舰，但也经常被归类为两栖攻击舰或反潜航空母舰。它主要用于执行包括反潜战、两栖作战和近距离空中支援在内的军事航空任务。有些两栖攻击舰有设计用于搭载登陆艇的船坞，并具有船坞登陆舰的功能。有些两栖攻击舰设计为配备垂直起降固定翼飞机，为两栖作战提供比攻击直升机更强大的近距离空中支援，并具有轻型航空母舰的功能。"
  helicopter_operator_hull_2: "1995型直升机航空母舰船体"
- helicopter_operator_hull_2_desc: ""
+ helicopter_operator_hull_2_desc: "直升机航母是一种主要用于搭载直升机的航空母舰，但也经常被归类为两栖攻击舰或反潜航空母舰。它主要用于执行包括反潜战、两栖作战和近距离空中支援在内的军事航空任务。有些两栖攻击舰有设计用于搭载登陆艇的船坞，并具有船坞登陆舰的功能。有些两栖攻击舰设计为配备垂直起降固定翼飞机，为两栖作战提供比攻击直升机更强大的近距离空中支援，并具有轻型航空母舰的功能。"
  helicopter_operator_hull_3: "2020型直升机航空母舰船体"
- helicopter_operator_hull_3_desc: ""
+ helicopter_operator_hull_3_desc: "直升机航母是一种主要用于搭载直升机的航空母舰，但也经常被归类为两栖攻击舰或反潜航空母舰。它主要用于执行包括反潜战、两栖作战和近距离空中支援在内的军事航空任务。有些两栖攻击舰有设计用于搭载登陆艇的船坞，并具有船坞登陆舰的功能。有些两栖攻击舰设计为配备垂直起降固定翼飞机，为两栖作战提供比攻击直升机更强大的近距离空中支援，并具有轻型航空母舰的功能。"
  helicopter_operator_hull_4: "2045型直升机航空母舰船体"
- helicopter_operator_hull_4_desc: ""
+ helicopter_operator_hull_4_desc: "直升机航母是一种主要用于搭载直升机的航空母舰，但也经常被归类为两栖攻击舰或反潜航空母舰。它主要用于执行包括反潜战、两栖作战和近距离空中支援在内的军事航空任务。有些两栖攻击舰有设计用于搭载登陆艇的船坞，并具有船坞登陆舰的功能。有些两栖攻击舰设计为配备垂直起降固定翼飞机，为两栖作战提供比攻击直升机更强大的近距离空中支援，并具有轻型航空母舰的功能。"
  aircraft_carrier_engineering: "航空母舰工程"
  aircraft_carrier_engineering_desc: "航空母舰工程是海军建设中最宏大、最困难的工程之一。"
  carrier_desc: "这些浮动的空军基地是海军力量的巅峰，能够伸向世界各地的海洋，将一个国家的力量投射到整个地球上。"
@@ -1031,39 +1031,39 @@
  tech_submarine_engineering: "潜艇工程"
  tech_submarine_engineering_desc: ""
  tech_submarine_engineering_1: "早期核反应堆"
- tech_submarine_engineering_1_desc: ""
+ tech_submarine_engineering_1_desc: "早期潜艇使用的柴电动力，由柴油机、电动机、发电机、电池组成。推进器是柴油机与电动机并联，柴油机既可用于水上航行，也可用柴油机带动发电机为电池充电。当船沉入水中时，空气供应有限，耗氧热机无法运转，电池将为电动机提供能量，电动机再用电推动推进器。"
  tech_submarine_engineering_2: "改进型核反应堆"
- tech_submarine_engineering_2_desc: ""
+ tech_submarine_engineering_2_desc: "新型柴电动力系统采用锂电池替代传统铅酸电池，实现更长的行驶时间。"
  tech_submarine_engineering_3: "现代核反应堆"
- tech_submarine_engineering_3_desc: ""
+ tech_submarine_engineering_3_desc: "AIP的引入可以使潜艇的运行更加高效、安静、可靠。"
  tech_submarine_engineering_4: "先进核反应堆"
- tech_submarine_engineering_4_desc: ""
+ tech_submarine_engineering_4_desc: "新技术的引入可以使潜艇在水下作业距离更远、速度更快、噪音更低。"
  attack_submarine_desc: ""
  attack_submarine_hull_1: "1965型攻击型潜艇船体"
- attack_submarine_hull_1_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。"
+ attack_submarine_hull_1_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐形、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。攻击潜艇是导弹和潜艇的组合，旨在打击海外远距离目标。"
  attack_submarine_hull_2: "1980型攻击型潜艇船体"
- attack_submarine_hull_2_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。"
+ attack_submarine_hull_2_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐形、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。攻击潜艇是导弹和潜艇的组合，旨在打击海外远距离目标。"
  attack_submarine_hull_3: "1995型攻击型潜艇船体"
- attack_submarine_hull_3_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。"
+ attack_submarine_hull_3_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐形、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。攻击潜艇是导弹和潜艇的组合，旨在打击海外远距离目标。"
  attack_submarine_hull_4: "2010型攻击型潜艇船体"
- attack_submarine_hull_4_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。"
+ attack_submarine_hull_4_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐形、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。攻击潜艇是导弹和潜艇的组合，旨在打击海外远距离目标。"
  attack_submarine_hull_5: "2025型攻击型潜艇船体"
- attack_submarine_hull_5_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。"
+ attack_submarine_hull_5_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐形、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。攻击潜艇是导弹和潜艇的组合，旨在打击海外远距离目标。"
  attack_submarine_hull_6: "2040型攻击型潜艇船体"
- attack_submarine_hull_6_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。"
+ attack_submarine_hull_6_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐形、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。攻击潜艇是导弹和潜艇的组合，旨在打击海外远距离目标。"
  missile_submarine_desc: "作为世界海洋中的无声杀手，这些海底作战平台拥有一系列有用的能力，包括隐身、情报收集和全套武器系统。"
  missile_submarine_hull_1: "1965型导弹型潜艇船体"
- missile_submarine_hull_1_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。导弹型潜艇用于猎杀其他潜艇。"
+ missile_submarine_hull_1_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐身、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。"
  missile_submarine_hull_2: "1980型导弹型潜艇船体"
- missile_submarine_hull_2_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。导弹型潜艇用于猎杀其他潜艇。"
+ missile_submarine_hull_2_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐身、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。"
  missile_submarine_hull_3: "1995型导弹型潜艇船体"
- missile_submarine_hull_3_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。导弹型潜艇用于猎杀其他潜艇。"
+ missile_submarine_hull_3_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐身、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。"
  missile_submarine_hull_4: "2010型导弹型潜艇船体"
- missile_submarine_hull_4_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。导弹型潜艇用于猎杀其他潜艇。"
+ missile_submarine_hull_4_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐身、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。"
  missile_submarine_hull_5: "2025型导弹型潜艇船体"
- missile_submarine_hull_5_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。导弹型潜艇用于猎杀其他潜艇。"
+ missile_submarine_hull_5_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐身、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。"
  missile_submarine_hull_6: "2040型导弹型潜艇船体"
- missile_submarine_hull_6_desc: "作为大洋深处中的无声杀手，这些海底作战平台具有一系列实用的能力，包括隐身、情报收集和全套武器系统。这些区域封锁专家被设计广泛用于公海或沿岸任务，是任何一支海军的基石。导弹型潜艇用于猎杀其他潜艇。"
+ missile_submarine_hull_6_desc: "这些水下作战平台是世界海洋的无声杀手，融合了一系列实用能力，包括隐身、情报收集和武器系统。这些区域拒止专家专为广泛的公海和沿海任务而设计，是任何海军的基石。"
  EQ_MOD_CAT_module_light_guns_category_TITLE: "轻型火炮"
  EQ_MOD_CAT_module_gun_battery_category_TITLE: "炮塔类型"
  EQ_MOD_CAT_module_heavy_guns_category_TITLE: "重型火炮"
@@ -1458,7 +1458,7 @@
  NAVAL_TITLE_MISSILE_DESTROYERS: "导弹驱逐舰"
  NAVAL_TITLE_MISSILE_DESTROYERS_DESC: "这些速度快、可操纵性好且寿命较长的旨在保护舰队或战斗群中的大型舰船的战舰，同样具备独立作战的能力。在后来的迭代中，她们开始携带多种致命的制导导弹、巡航导弹和其他武器，的的确确成为了多用途战舰。与您的轻型护卫舰或护卫舰相比，其吨位更大、火力更具攻击性和致命性。她们通常被用于：舰队护航、进攻性任务、防空、反舰、反潜以及对地攻击任务（这取决于她们携带的武器种类）。"
  NAVAL_TITLE_MISSILE_CRUISERS: "导弹巡洋舰"
- NAVAL_TITLE_MISSILE_CRUISERS_DESC: "巡洋舰是现代舰队中吨位最大的战舰（除了航空母舰和两栖攻击舰），这些强大的装备的航程可以覆盖整个海洋。在历史上，巡洋舰的主要任务是防空（而驱逐舰的任务是水面战），而现代巡洋舰有着令人难以置信的丰富武器库，比任何其他战斗舰艇都要强大。巡洋舰可以作为整个战斗群的基础，她也拥有有大量的传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰以及对地攻击任务。"
+ NAVAL_TITLE_MISSILE_CRUISERS_DESC: "这些强大的舰船通常是现代舰队中最大的攻击舰（除了航空母舰和两栖攻击舰），可以覆盖全球的整个海洋。现代巡洋舰历来以防空为主要任务（而驱逐舰则负责水面作战），拥有令人难以置信的武器库 - 比任何其他战斗舰都多。巡洋舰可以作为整个战斗群的基础，拥有大量传感器和战斗管理系统。它们通常用于：指挥和控制、防空、反舰和对陆攻击任务。"
  NAVAL_TITLE_HELICOPTER_CARRIER: "直升机航母"
  NAVAL_TITLE_HELICOPTER_CARRIER_DESC: "这些多用途两栖攻击舰类似于航空母舰，但在在生产和人力方面以较低的成本提供了巨大的威力。 能够搭载直升机、短距起飞和垂直起降（STOVL）固定翼飞机以及海军陆战队突击艇，许多舰艇还拥有井式甲板 - 可以对敌方阵地迅速进行两栖攻击。这些舰艇为任何两栖登陆提供了巨大的支援。它们通常用于：指挥和控制、反潜、水面战、空战（如果装备固定翼飞机）、岸上轰炸以及两栖登陆支援。"
  NAVAL_TITLE_DIESEL_ATTACK_SUBMARINE: "攻击型柴油潜艇"
@@ -1631,7 +1631,7 @@
  tank_components_tech_3: "现代武器站和辅助设备"
  tank_components_tech_3_desc: "导航系统、照相机和全数字弹道计算机。为了提高我们的防御能力，我们的烟雾发射器现在将能够覆盖我们坦克的红外线信号。"
  tank_components_tech_4: "先进武器站和辅助设备"
- tank_components_tech_4_desc: "摄像机组和先进的战斗观察系统。改进后的计算机系统使我们能够为坦克配备硬杀伤防御系统，以摧毁迎面而来的弹丸。"
+ tank_components_tech_4_desc: "一套摄像机和先进的战斗观察系统。改进的计算机系统使我们能够为坦克配备硬杀伤防御系统，以摧毁来袭的射弹。"
  tank_components_tech_5: "未来武器站和辅助设备"
  tank_components_tech_5_desc: "3D可视化、虚拟战场、最新技术和通信系统以及改进的检测算法将使我们能够改进我们的硬杀伤技术。"
  era_tech: "第1代爆炸式反应装甲"
@@ -1687,7 +1687,7 @@
  small_medium_gun_tech: "冷战早期轻型坦克炮"
  small_medium_gun_tech_desc: "轻型坦克炮在冷战早期的坦克上很常见。苏联的标准是100毫米，西方国家是105毫米，两者都有足够的火力对付当时的车辆和步兵。"
  small_medium_gun_tech_2: "冷战后期轻型坦克炮"
- small_medium_gun_tech_2_desc: "随着铸造和热套筒的改进，到冷战后期，坦克炮在失效前可以维持更高的射速。"
+ small_medium_gun_tech_2_desc: "随着铸造技术和隔热套管的改进，到了冷战后期，坦克炮在发生故障前可以维持更高的射速。"
  small_medium_gun_tech_3: "现代轻型坦克炮"
  small_medium_gun_tech_3_desc: "装备了长冲程低后坐力缓冲装置和改进的后膛，现代轻型坦克炮即使对较重的车辆也是致命的，特别是使用改进的弹药。"
  small_medium_gun_tech_4: "未来轻型坦克炮"
@@ -3537,13 +3537,13 @@
  tank_support_weapons_upgrade: "支援武器"
  tank_cutting_corners_upgrade: "偷工减料"
  nsb_AA_upgrade_1: "第2代电池冷却装置"
- nsb_AA_upgrade_1_desc: "内含一个热电池，为飞行前的准备操作提供能源。并供应氩气以冷却导弹导引头中的红外探测器。"
+ nsb_AA_upgrade_1_desc: "包含一个温控电池，为飞行前操作提供电力，以及供应氩气来冷却导弹导引头中的红外探测器。"
  nsb_AA_upgrade_2: "第3代红外/紫外蔷薇线扫描"
- nsb_AA_upgrade_2_desc: "电磁波谱的紫外波段有能被用作制导武器的主介质的潜力--这是制导技术的延续。"
+ nsb_AA_upgrade_2_desc: "电磁波谱的紫外波段有可能被用作制导武器操作的宿主介质 - 这是该技术的延续。"
  nsb_AA_upgrade_3: "冷却红外系统"
- nsb_AA_upgrade_3_desc: "其高度灵敏，可以检测到目标中最微小的温度变化。"
+ nsb_AA_upgrade_3_desc: "灵敏度高，可以检测到目标最细微的温度变化。"
  nsb_AA_upgrade_4: "铟镓砷影像传感器"
- nsb_AA_upgrade_4_desc: "现代高超音速成像系统使用这些感应装置来采集目标图像"
+ nsb_AA_upgrade_4_desc: "现代高超音速成像系统使用这些传感器来获取目标的图像。"
  light_tank_tech: "早期轻型坦克"
  light_tank_tech_desc: "第1代的轻型坦克。"
  light_tank_tech_1: "冷战轻型坦克"
