Bugfixes and models

--- a/localisation/russian/equipment_l_russian.yml
+++ b/localisation/russian/equipment_l_russian.yml
@@ -4130,7 +4130,7 @@
  SOV_Heavy_Anti_tank_0_desc: "Используется во многих войнах и на многих транспортных средствах. Эффективная дальность 500-3000 метров."
  SOV_Heavy_Anti_tank_1: "МТЛБ «Конкурс»"
  SOV_Heavy_Anti_tank_1_desc: "Более тяжелая ракетная система запускает больше, чем одну. «Конкурс» может поразить цели на расстоянии 4 км и уничтожить самый большой из танков врагов."
- SOV_Heavy_Anti_tank_2: "Корнет-E"
+ SOV_Heavy_Anti_tank_2: "9M123 Khrizantema"
  SOV_Heavy_Anti_tank_3: "Волк АТ-22"
  SOV_Heavy_Anti_tank_4: "Волк АТ-45"
 
